--- a/Assests/Projects/Client-Server.html
+++ b/Assests/Projects/Client-Server.html
@@ -8,20 +8,23 @@
 </head>
 <body>
 
+   
     <center>
-
-        <h3>Blogs</h3>
-
+        <h3><a href="../Layouts/projects.html" >Back</a></h3>
+    </center>
+    
 
         <div class="normal-container-name">
 
             <div class="normal-container-name-item">
-                <p><strong><a href="../blogs/email protection.html" >Email Protection</a></strong></p>
+                <h3>Server-Client in C</h3>
+                <p> info</p>
+
+                <a href = "https://github.com/k0k1s/Server-Client" > Project repo</a>
             </div>
 
         </div>
 
-    </center>
 
 </body>
 </html>
