--- a/Assests/Projects/URLripper.html
+++ b/Assests/Projects/URLripper.html
@@ -8,20 +8,25 @@
 </head>
 <body>
 
+   
     <center>
-
-        <h3>Blogs</h3>
-
+        <h3><a href="../Layouts/projects.html" >Back</a></h3>
+    </center>
+    
 
         <div class="normal-container-name">
 
             <div class="normal-container-name-item">
-                <p><strong><a href="../blogs/email protection.html" >Email Protection</a></strong></p>
+
+                <h3>URLripper</h3>
+                <p> info</p>
+
+                <a href = "https://github.com/k0k1s/urlripper" > Project repo</a>
+            
             </div>
 
         </div>
 
-    </center>
 
 </body>
 </html>
