--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
     <script>
-        // Use JavaScript to automatically redirect to second.html
+        // aase JavaScript to automatically redirect to second.html
         window.location.href = 'Assests/Layouts/home.html'
     </script>
 </body>
